crates/lang/tests/ui/trait_def/fail/definition_constructor.stderr
error: ink! trait definitions must not have constructors
 --> tests/ui/trait_def/fail/definition_constructor.rs:5:5
  |
5 |     #[ink(constructor)]
  |     ^
